# edgekit

./: .gitignore  README.ja.md  README.md  pyproject.toml
examples/: entry.py
examples/web-app/: README.md  package-lock.json  package.json  pyproject.toml  wrangler.jsonc
examples/web-app/public/: hello.txt
examples/web-app/src/: app.py
examples/web-app/templates/: base.html  root.html
public/: hello.txt
src/edgekit/: __init__.py  _js.py  _utils.py  cli.py  runtime.py  worker.py
src/edgekit/adapters/: __init__.py  asgi.py  wsgi.py
src/edgekit/bindings/: __init__.py  assets.py  d1.py  durable_objects.py  kv.py  queues.py  r2.py
src/edgekit/builder/: __init__.py  analyzer.py  artifacts.py  ast_support.py  barriers.py  binding_validation.py  common.py  config.py  doctor.py  mode.py  models.py  profiles.py  prune.py  report.py  resolver.py  runtime_index.py  vendor_support.py
src/edgekit/builder/emitter/: __init__.py  collectors.py  graph.py  runtime.py  slicing.py  symbols.py  transform.py  types.py  vendor.py
src/edgekit/core/: __init__.py  context.py  env.py  errors.py
src/edgekit/ffi/: __init__.py  convert.py  escape.py  proxy.py
src/edgekit/typing/: __init__.py  json.py  protocols.py  result.py
src/edgekit/webapi/: __init__.py  body.py  headers.py  request.py  response.py  url.py
