[project]
name = "web-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["edgekit", "flask"]

[tool.uv]
cache-dir = "../../.cache/uv"

[tool.uv.sources]
edgekit = { path = "../..", editable = true }

[dependency-groups]
dev = ["workers-py", "workers-runtime-sdk"]

[tool.edgekit.builder]
entry = "src/app.py"

[tool.edgekit.builder.include]
files = ["templates/**"]
